[project]
name = "3d-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.13"
dependencies = [
    "diffusers>=0.37.0",
    "einops>=0.8.2",
    "huggingface-hub>=1.7.1",
    "langchain>=1.2.12",
    "langchain-agent>=0.1.1",
    "langchain-classic>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.11",
    "langchain-qwq>=0.3.4",
    "langgraph>=1.1.2",
    "opencv-python>=4.13.0.92",
    "pymeshlab>=2025.7.post1",
    "python-dotenv>=1.2.2",
    "scikit-image>=0.26.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "trimesh>=4.11.3",
    "duckduckgo-search>=7.0.0",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
